src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>About_Me__c</fullName>
        <description>It will holds the details about the volunteer contact itself</description>
        <label>About Me</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <description>It will be used as a hidden field to store contact&apos;s account email</description>
        <formula>Account.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <description>It will be used as a hidden filed to store the contact&apos;s account phone</description>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Board_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Organizational Affiliation = Active, Conflict of interest = Not Expired, BGC = Not Expired, Volunteer Role Only Board Member = Trained</description>
        <label>Active Board Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Non_Wish_Granter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Organization Affiliation=Active, Conflict of Interest=Not Expired, ((Volunteer Role (excluding anyone with a role of Board Member, Wish Granter, Wish Granter Mentor) = Trained without requirement of BGC) OR (Volunteer Role (excluding anyone with a role of Board Member, Wish Granter, Wish Granter Mentor) = Trained with BGC = Not Expired for required roles))</description>
        <label>Active Non-Wish Granter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Single_Day_Event_Volunteer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Organization Affiliation=Active, Volunteer Role=Single Day Event Volunteer, Last Completed Opportunity=Last 365 days</description>
        <label>Active Single Day Event Volunteer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Wish_Granter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Organization Affiliation=Active, Conflict of Interest=Not Expired, BGC=Not Expired, (Volunteer Role of Wish Granter=Trained or Volunteer Role of Wish Granter Mentor=Trained)</description>
        <label>Active Wish Granter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actor_Actress__c</fullName>
        <description>It will capture the Wish Child&apos;s favorite Actor/Actress details</description>
        <label>Actor/Actress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adult_Emergency_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will define that this contact is Adult&apos;s emergency contact or not.</description>
        <label>Is Adult Emergency Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Already_wish_granted_by_MAW_Other_Org__c</fullName>
        <description>Prior Wish Granted details</description>
        <label>Already Wish Granted By MAW/Other Org</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone_Type__c</fullName>
        <description>This field is used to store the type of alternate phone.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <description>It store the alternate phone number.</description>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>B_C_Expiration_Date__c</fullName>
        <description>It holds the Background check expiration date</description>
        <label>B/C Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birth_Day__c</fullName>
        <description>It will hold the day value of the Birth day</description>
        <label>Birth Day</label>
        <picklist>
            <controllingField>Birth_Month__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_Month__c</fullName>
        <description>It will hold the month value of the DOB</description>
        <label>Birth Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_Year__c</fullName>
        <description>It will capture the volunteer birth year value</description>
        <label>Birth Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will used to identify the Board Member</description>
        <label>Board Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Board_Term_End_Date__c</fullName>
        <description>it holds the details of the Board Term End Date</description>
        <label>Board Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Board_Term_Start_Date__c</fullName>
        <description>It holds the details of Board Term Start Date</description>
        <label>Board Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Book_Story__c</fullName>
        <description>It will capture the wish child favorites book story details</description>
        <label>Book/Story</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broadcast_Number__c</fullName>
        <description>It is a hidden field , used to find the volunteer is read the broadcast message or not.</description>
        <label>Hidden Broadcast Number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COI_Expiration_Date__c</fullName>
        <description>It holds the Expiration Date of COI</description>
        <label>COI Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cake_Candy__c</fullName>
        <description>It will capture the wish child favorite Cake/Candy details</description>
        <label>Cake/Candy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Employer__c</fullName>
        <description>It will hold the city value of the employer</description>
        <label>City</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_in_School__c</fullName>
        <description>It will capture the wish child class details</description>
        <label>Class In School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <description>It will capture the wish child favorite colors</description>
        <label>Color</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <description>It will hold which type of communication can understand by child and this field mapped from lead at the time of lead conversion.</description>
        <label>Communication</label>
        <picklist>
            <picklistValues>
                <fullName>This child is non-verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This child is developmentally on target for chronological age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This child functions at a 0-2 year old, Sensorimotor stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This child functions at a 2-7 year old, Preoperational stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This child functions at a 7-11 year old, Concrete Operational stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This child functions at an 11+ year old, Formal Operational stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am not sure</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Name__c</fullName>
        <description>It will be used as a hidden field to store the contact&apos;s account name</description>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>It will store the value of County.</description>
        <label>County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Age__c</fullName>
        <description>This field is to calculate the age of the wish child based on the DOB</description>
        <formula>IF(AND(NOT(ISBLANK(Birthdate)),npsp__Deceased__c = false) , 
IF(DATE(2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ), 
YEAR (Today()) - YEAR ( Birthdate ), 
YEAR (Today()) - YEAR ( Birthdate ) -1 ), 
null)</formula>
        <label>Current Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Conditions__c</fullName>
        <description>Used to hold current conditions</description>
        <label>Current Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Wish_Assigned__c</fullName>
        <description>Used to get the date of the wish that assigned to the volunteer</description>
        <label>Date Of Wish Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_last_engagement__c</fullName>
        <description>It capture the volunteer last engagement  date.</description>
        <label>Date Of Last Engagement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased_Date__c</fullName>
        <description>It capture the Deceased date.</description>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Medical Professional&apos;s department in medical facility</description>
        <label>Department</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diagnosis__c</fullName>
        <description>It will have Wish Child&apos;s Medical Condition details</description>
        <label>Primary Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact_Notes__c</fullName>
        <description>It will capture the detail information about the contact notes</description>
        <label>Do Not Contact Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Create_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, then we should not create volunteer for this contact.</description>
        <label>Do Not Create User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driver_Type__c</fullName>
        <description>It will hold the value of Driver type(Potential/Preferred)</description>
        <label>Driver Type</label>
        <picklist>
            <picklistValues>
                <fullName>Preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electronics_Games_that_I_like_to_play__c</fullName>
        <description>It will capture the details,Wish Child likes to play with Electronics/Games.</description>
        <label>Electronics/Games That I Like To Play</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <description>It will hold the emergency contact number.</description>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Relationship__c</fullName>
        <description>Relationship values for volunteer emergency contacts.</description>
        <label>Emergency Contact Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <description>It will hold the value of emergency contact information.</description>
        <label>Emergency Contact</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <description>It will hold the information about the employer.</description>
        <label>Employer</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>It holds the License Expiration Date details.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>It holds the id value of External System.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Last_Initial__c</fullName>
        <description>It will probably have multiple uses, including emailing sensitive medical information without using full name (medical advisory review for non migrated chapters) as well as display of available wish volunteer opportunities.</description>
        <formula>FirstName+&apos; &apos;+LEFT(LastName,1)</formula>
        <label>First + Last Initial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Recipient_Name__c</fullName>
        <description>This field will capture the mane of the 1st recipient</description>
        <label>Hidden First Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food__c</fullName>
        <description>it will capture wish child favorite food details</description>
        <label>Food</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Mulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicated the record is created by manually or from mulesoft.</description>
        <label>From Mulesoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Game__c</fullName>
        <description>It will capture the wish child favorite game details</description>
        <label>Game</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>It will hold the gender information.</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I choose not to self-identify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Granted_Age__c</fullName>
        <formula>IF( NOT(ISBLANK(Birthdate)) , 
IF(DATE(2000 , MONTH( Birthdate) , DAY( Birthdate) ) &lt;= DATE( 2000 , MONTH(Hidden_Granted_Date__c) , DAY(Hidden_Granted_Date__c) ), 
YEAR (Hidden_Granted_Date__c) - YEAR (Birthdate), 
YEAR (Hidden_Granted_Date__c) - YEAR (Birthdate) -1 ), 
null)</formula>
        <label>Granted Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HiddenBirthDate__c</fullName>
        <description>This field is used for docusign purpose.</description>
        <formula>text(MONTH(Birthdate)) +&apos;/&apos;+ text(DAY(Birthdate)) +&apos;/&apos;+ text(YEAR(Birthdate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden BirthDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HiddenMobilePhone__c</fullName>
        <description>This field is used to store the updated mobile phone value from Updated contact info page.</description>
        <label>Hidden Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HiddenOtherPhone__c</fullName>
        <description>This field is used to store the updated other phone value from Updated contact info page.</description>
        <label>Hidden Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hidden_Country__c</fullName>
        <description>This field is used as hidden to update the contact country  from volunteer portal</description>
        <label>Hidden Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Email__c</fullName>
        <description>This field is used as hidden to update the contact email from volunteer portal</description>
        <label>Hidden Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hidden_First_Name__c</fullName>
        <description>This field is used as hidden to update the contact first name from volunteer portal</description>
        <label>Hidden First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Granted_Date__c</fullName>
        <label>Hidden Granted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hidden_Is_We_Need_To_Expedite_The_Proces__c</fullName>
        <description>This field is used to send the email to the wish child owner based on the value.</description>
        <label>Hidden Is We Need To Expedite The Proces</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hidden_Last_Name__c</fullName>
        <description>This field is used as hidden to update the contact last name from volunteer portal</description>
        <label>Hidden Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Medical_Physician_Email__c</fullName>
        <description>This field is used to store the medical professional email address for docusign purpose.</description>
        <label>Wish Clearance Medical Physician Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hidden_Medical_Physician__c</fullName>
        <description>This field is used to store the treating medical professional name for docusign purpose.</description>
        <label>Wish Clearance Medical Physician</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Minor_Participant__c</fullName>
        <description>This hidden field is used to store the minor participant name and email value from WishLiabilityMinorParticipant_VF page.</description>
        <label>Hidden Minor Participant</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_Phone__c</fullName>
        <description>This field is used as hidden to update the contact phone from volunteer portal</description>
        <label>Hidden Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hidden_Same_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used in update contact info</description>
        <label>Hidden Same Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_State__c</fullName>
        <description>Hidden State Value</description>
        <label>Hidden State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Status__c</fullName>
        <description>It store the Affiliation Object  Status field value</description>
        <label>Hidden Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hidden_Street__c</fullName>
        <description>This field is used as hidden to update the contact Street from volunteer portal</description>
        <label>Hidden Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Use_as_Household_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for update voulunteer contact address from the community.</description>
        <label>Hidden Use as Household Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Child_Id__c</fullName>
        <description>This field holds Id of Wish child Id.</description>
        <label>Hidden Wish Child Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Zip_Code__c</fullName>
        <description>This field is used as hidden to update the contact Zip Code from volunteer portal</description>
        <label>Hidden Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_city__c</fullName>
        <description>This field is used as hidden to update the contact city from volunteer portal</description>
        <label>Hidden City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hobby__c</fullName>
        <description>It will capture the wish child favorite hobby details</description>
        <label>Hobby</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_Make_A_Wish__c</fullName>
        <description>it holds the details of the different ways, in which the person who came to know about the make a wish</description>
        <label>How Did You Hear About Make-A-Wish?</label>
        <picklist>
            <picklistValues>
                <fullName>Aware of a wish family who experienced a wish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College / University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media / Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other, please specify</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_did_you_know_MAWA_Other_Notes__c</fullName>
        <description>Volunteer can enter MAWA details and how they came to know about MAWA.</description>
        <label>How Did You Know MAWA (Other Notes)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICD_10_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will hold the ICD-10 code.</description>
        <label>Primary ICD-10 Code</label>
        <referenceTo>ICD_Codes__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>I_m_on_LinkedIn__c</fullName>
        <description>This Field is used to indicate weather the user have LinkedIn account or not.</description>
        <label>I’m On LinkedIn</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_yes_Enter_Org_Name_Wish_Date_it_was__c</fullName>
        <description>If already wish granted, please indicate the organization&apos;s name, the wish,
and the date it was or will be granted.</description>
        <inlineHelpText>If already wish granted, please indicate the organization&apos;s name, the wish,
and the date it was or will be granted.</inlineHelpText>
        <label>If Yes, Enter Org.Name,Wish&amp; Date It Was</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Import_Id__c</fullName>
        <description>It holds the import id.</description>
        <label>Import Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Referral_Method__c</fullName>
        <description>This field is used to capture the inquiry method type.</description>
        <label>Inquiry/Referral Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interested_involved_with_Make_A_Wish__c</fullName>
        <description>It holds whether the user is interested and would be involved in Make-A-Wish?</description>
        <label>Would Your Company Be Interested MAW</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsContactInfoUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for update contact info approval process.</description>
        <label>Hidden IsContactInfoUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFirstParentGuardian__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is Hidden field is used to Identify the first Parent Guardian to sign the docusign document.</description>
        <label>Hidden IsFirstParentGuardian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsParentGuardian__c</fullName>
        <description>This check box is used to check parent guardian is signed or not. in docusign document.</description>
        <label>Hidden IsParentGuardian</label>
        <picklist>
            <picklistValues>
                <fullName>ParentGuardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsRecall_Contact_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for update contact info approval process.</description>
        <label>Hidden IsRecall Contact Info</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>